# password-manager

./: LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
docs/: manual-test-checklist.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autolock.rs  error.rs  lib.rs  paths.rs  state.rs  tray.rs
src-tauri/src/commands/: clipboard.rs  entry_crud.rs  export_import.rs  mod.rs  settings.rs  vault_lifecycle.rs
src-tauri/src/crypto/: cipher.rs  kdf.rs  mod.rs  vault_file.rs
src-tauri/src/model/: entry.rs  mod.rs  vault_data.rs
src/components/: ConfirmDialog.tsx  EntryRow.tsx  SearchBar.tsx
src/lib/: passwordGenerator.ts  tauriCommands.ts
src/state/: useNavStore.ts  useSessionStore.ts  useSettingsStore.ts  useVaultStore.ts
src/types/: settings.ts  vault.ts
src/views/: CreateVaultView.tsx  EntryDetailView.tsx  EntryEditView.tsx  GeneratorView.tsx  SettingsView.tsx  UnlockView.tsx  VaultListView.tsx
